# Ktuarto

./: .gitignore  README.md  pyproject.toml
.github/workflows/: battle_between_AIs.yml  github-actions-demo.yml
ktuarto/AI/: __init__.py  i_love_strong_computer.py  montecarlo_ai.py  montecarlo_ai_PrioritizedDraw.py  montecarlo_ai_PrioritizedDrawC1.py  montecarlo_ai_PrioritizedDrawC3.py  montecarlo_ai_UnifiedUcbCalc.py  montecarlo_ai_UnifiedUcbCalcC1.py  montecarlo_ai_UnifiedUcbCalcC3.py  montecarlo_c_0.py  montecarlo_c_01.py  montecarlo_c_02.py  montecarlo_c_03.py  montecarlo_c_04.py  montecarlo_c_05.py  montecarlo_c_06.py  montecarlo_c_07.py  montecarlo_c_08.py  montecarlo_c_09.py  montecarlo_c_1.py  montecarlo_choose_diagonal_lines_first.py  montecarlo_choose_places_other_than_diagonal_lines_first.py  montecarlo_deeper.py  montecarlo_shallower.py  random_ai.py  sample_ai.py
ktuarto/scripts/: run.py
ktuarto/utils/: __init__.py  board.py  box.py  firebase_client.py  gamemain.py  gameplayer.py  gameplayerinfo.py  rating.py  test_ktuarto_rating.py  util.py
python/quarto/gamesys/: gameplayerinfo.py
tests/: test_ktuarto.py
